crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__reasonix__permission-flow.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- SessionStart:
    agent_id: 9520014083333453177
    source: reasonix
    session_id: /tmp/pixtuoid-capture/proj
    cwd: /tmp/pixtuoid-capture/proj
    parent_id: ~
- SessionStart:
    agent_id: 9520014083333453177
    source: reasonix
    session_id: /tmp/pixtuoid-capture/proj
    cwd: /tmp/pixtuoid-capture/proj
    parent_id: ~
- Identity:
    agent_id: 9520014083333453177
    source: reasonix
    session_id: /tmp/pixtuoid-capture/proj
    cwd: /tmp/pixtuoid-capture/proj
- Waiting:
    agent_id: 9520014083333453177
    reason: "approval: write_file /tmp/pixtuoid-capture/proj/OUT.txt"
- Identity:
    agent_id: 9520014083333453177
    source: reasonix
    session_id: /tmp/pixtuoid-capture/proj
    cwd: /tmp/pixtuoid-capture/proj
- Waiting:
    agent_id: 9520014083333453177
    reason: "approval needed: write_file /tmp/pixtuoid-capture/proj/OUT.txt"
- Identity:
    agent_id: 9520014083333453177
    source: reasonix
    session_id: /tmp/pixtuoid-capture/proj
    cwd: /tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 9520014083333453177
    tool_use_id: ~
    detail:
      Generic:
        display: "write_file: /tmp/pixtuoid-capture/proj/OUT.txt"
- Identity:
    agent_id: 9520014083333453177
    source: reasonix
    session_id: /tmp/pixtuoid-capture/proj
    cwd: /tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 9520014083333453177
    tool_use_id: ~
- Identity:
    agent_id: 9520014083333453177
    source: reasonix
    session_id: /tmp/pixtuoid-capture/proj
    cwd: /tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 9520014083333453177
    tool_use_id: ~
    detail:
      Generic:
        display: "read_file: /tmp/pixtuoid-capture/proj/OUT.txt"
- Identity:
    agent_id: 9520014083333453177
    source: reasonix
    session_id: /tmp/pixtuoid-capture/proj
    cwd: /tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 9520014083333453177
    tool_use_id: ~
- ActivityEnd:
    agent_id: 9520014083333453177
    tool_use_id: ~
- SessionEnd:
    agent_id: 9520014083333453177
    as_child: false
