crates/pixtuoid-core/tests/sources/snapshots/sources__conformance__reasonix__tool-run.snap
---
source: crates/pixtuoid-core/tests/sources/conformance.rs
expression: events
---
- SessionStart:
    agent_id: 9303204154111306338
    source: reasonix
    session_id: 20260919-181359.833852000-deepseek-v4-flash
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- SessionStart:
    agent_id: 9303204154111306338
    source: reasonix
    session_id: 20260919-181359.833852000-deepseek-v4-flash
    cwd: /private/tmp/pixtuoid-capture/proj
    parent_id: ~
- Identity:
    agent_id: 9303204154111306338
    source: reasonix
    session_id: 20260919-181359.833852000-deepseek-v4-flash
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 9303204154111306338
    tool_use_id: ~
    detail:
      Generic:
        display: "read_file: NOTE.txt"
- Identity:
    agent_id: 9303204154111306338
    source: reasonix
    session_id: 20260919-181359.833852000-deepseek-v4-flash
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 9303204154111306338
    tool_use_id: ~
- Identity:
    agent_id: 9303204154111306338
    source: reasonix
    session_id: 20260919-181359.833852000-deepseek-v4-flash
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 9303204154111306338
    tool_use_id: ~
    detail:
      Generic:
        display: "bash: ls -la"
- Identity:
    agent_id: 9303204154111306338
    source: reasonix
    session_id: 20260919-181359.833852000-deepseek-v4-flash
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 9303204154111306338
    tool_use_id: ~
- Identity:
    agent_id: 9303204154111306338
    source: reasonix
    session_id: 20260919-181359.833852000-deepseek-v4-flash
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityStart:
    agent_id: 9303204154111306338
    tool_use_id: ~
    detail:
      Generic:
        display: "read_file: NOTE.txt"
- Identity:
    agent_id: 9303204154111306338
    source: reasonix
    session_id: 20260919-181359.833852000-deepseek-v4-flash
    cwd: /private/tmp/pixtuoid-capture/proj
- ActivityEnd:
    agent_id: 9303204154111306338
    tool_use_id: ~
- ActivityEnd:
    agent_id: 9303204154111306338
    tool_use_id: ~
- SessionEnd:
    agent_id: 9303204154111306338
    as_child: false
